@@ -28,9 +28,6 @@ libevtx_la_SOURCES = \
 	evtx_file_header.h \
 	libevtx.c \
 	libevtx_array_type.c libevtx_array_type.h \
-	libevtx_binary_xml_document.c libevtx_binary_xml_document.h \
-	libevtx_binary_xml_template_value.c libevtx_binary_xml_template_value.h \
-	libevtx_binary_xml_token.c libevtx_binary_xml_token.h \
 	libevtx_checksum.c libevtx_checksum.h \
 	libevtx_chunk.c libevtx_chunk.h \
 	libevtx_chunks_table.c libevtx_chunks_table.h \
@@ -52,6 +49,7 @@ libevtx_la_SOURCES = \
 	libevtx_libfdatetime.h \
 	libevtx_libfguid.h \
 	libevtx_libfvalue.h \
+	libevtx_libfwevt.h \
 	libevtx_libuna.h \
 	libevtx_list_type.c libevtx_list_type.h \
 	libevtx_notify.c libevtx_notify.h \
@@ -59,8 +57,7 @@ libevtx_la_SOURCES = \
 	libevtx_record_values.c libevtx_record_values.h \
 	libevtx_support.c libevtx_support.h \
 	libevtx_types.h \
-	libevtx_unused.h \
-	libevtx_xml_tag.c libevtx_xml_tag.h
+	libevtx_unused.h
 
 libevtx_la_LIBADD = \
 	@LIBCSTRING_LIBADD@ \
